@@ -13,7 +13,8 @@ PARAMETRI
 -----------------------------------------------------------------------------------
 {
 "TASSO":2.3,
-"COMMISSIONI":1.2
+"COMMISSIONI":1.2,
+"ATTUALIZZAZIONE":1.2
 }
 -----------------------------------------------------------------------------------
 */
